# chainlit

backend/: public  pyproject.toml
backend/chainlit/: server.py
frontend/src/components/atoms/: logo.tsx
frontend/src/components/organisms/chat/inputBox/: waterMark.tsx
libs/react-components/src/messages/components/: DetailsButton.tsx
