[tool.poetry]
name = "chainlit"
version = "1.0.200"
keywords = ['LLM', 'Agents', 'gen ai', 'chat ui', 'chatbot ui', 'openai', 'copilot', 'langchain', 'conversational ai']
description = "Build Conversational AI."
authors = ["Chainlit"]
license = "Apache-2.0 license"
repository = "https://github.com/Chainlit/chainlit"
readme = "README.md"
exclude = [
    "**/frontend/**/*",
    "**/copilot/**/**/",
]
include = [
    "**/frontend/dist/**/*",
    "**/copilot/dist/**/*",
]

[tool.poetry.scripts]
# command_name = module_for_handler : function_for_handler
chainlit = 'chainlit.cli:cli'

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
httpx = "0.24.1"
literalai = "0.0.103"
dataclasses_json = "0.5.14"
# FastAPI 0.109.0 breaks socketio (alway 404)
fastapi = "0.100.1"
uvicorn = "0.25.0"
fastapi-socketio = "0.0.10"
aiofiles = "23.2.1"
syncer = "2.0.3"
asyncer = "0.0.2"
nest-asyncio = "1.5.8"
click = "8.1.7"
tomli = "2.0.1"
pydantic = "2.5.3"
python-graphql-client = "0.4.3"
python-dotenv = "1.0.0"
uptrace = "1.22.0"
watchfiles="0.20.0"
filetype = "1.2.0"
lazify = "0.4.0"
packaging = "23.2"
python-multipart = "0.0.6"
pyjwt = "2.8.0"
aiohttp = "3.9.1"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
anyio = "3.7.1"
asttokens = "2.4.1"
async-timeout = "4.0.3"
asyncpg = "0.29.0"
attrs = "23.2.0"
backoff = "2.2.1"
beautifulsoup4 = "4.12.2"
bidict = "0.22.1"
build = "1.0.3"
cachecontrol = "0.13.1"
certifi = "2023.11.17"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
crashtest = "0.4.1"
decorator = "5.1.1"
deprecated = "1.2.14"
distlib = "0.3.8"
distro = "1.9.0"
dnspython = "2.4.2"
dulwich = "0.21.7"
executing = "2.0.1"
fastjsonschema = "2.19.1"
filelock = "3.13.1"
flupy = "1.2.0"
frozenlist = "1.4.1"
fsspec = "2023.12.2"
googleapis-common-protos = "1.62.0"
greenlet = "3.0.3"
grpcio = "1.60.0"
h11 = "0.14.0"
httpcore = "0.17.3"
idna = "3.6"
importlib-metadata = "6.11.0"
installer = "0.7.0"
ipdb = "0.13.13"
ipython = "8.20.0"
jaraco-classes = "3.3.0"
jedi = "0.19.1"
joblib = "1.3.2"
keyring = "24.3.0"
llama-index = "0.9.30"
loguru = "0.7.2"
marshmallow = "3.20.2"
matplotlib-inline = "0.1.6"
more-itertools = "10.2.0"
msgpack = "1.0.7"
multidict = "6.0.4"
mypy-extensions = "1.0.0"
networkx = "3.2.1"
nltk = "3.8.1"
numpy = "1.26.3"
openai = "1.7.2"
opentelemetry-api = "1.22.0"
opentelemetry-exporter-otlp = "1.22.0"
opentelemetry-exporter-otlp-proto-common = "1.22.0"
opentelemetry-exporter-otlp-proto-grpc = "1.22.0"
opentelemetry-exporter-otlp-proto-http = "1.22.0"
opentelemetry-instrumentation = "0.43b0"
opentelemetry-proto = "1.22.0"
opentelemetry-sdk = "1.22.0"
opentelemetry-semantic-conventions = "0.43b0"
pandas = "2.1.4"
parso = "0.8.3"
pexpect = "4.9.0"
pgvector = "0.1.8"
pinecone-client = "2.2.4"
pkginfo = "1.9.6"
platformdirs = "3.11.0"
poetry = "1.7.1"
poetry-core = "1.8.1"
poetry-plugin-export = "1.6.0"
prompt-toolkit = "3.0.43"
protobuf = "4.25.2"
psycopg2 = "2.9.9"
psycopg2-binary = "2.9.9"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pycparser = "2.21"
pydantic-core = "2.14.6"
pygments = "2.17.2"
pyproject-hooks = "1.0.0"
python-dateutil = "2.8.2"
python-engineio = "4.8.2"
python-socketio = "5.11.0"
pytz = "2023.3.post1"
pyyaml = "6.0.1"
rapidfuzz = "3.6.1"
regex = "2023.12.25"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
simple-websocket = "1.0.0"
six = "1.16.0"
sniffio = "1.3.0"
soupsieve = "2.5"
sqlalchemy = "2.0.25"
stack-data = "0.6.3"
starlette = "0.27.0"
tenacity = "8.2.3"
tiktoken = "0.5.2"
tomlkit = "0.12.3"
tqdm = "4.66.1"
traitlets = "5.14.1"
trove-classifiers = "2024.1.8"
typing-inspect = "0.9.0"
typing-extensions = "4.9.0"
tzdata = "2023.4"
urllib3 = "2.1.0"
vecs = "0.4.2"
virtualenv = "20.25.0"
wcwidth = "0.2.13"
websockets = "12.0"
wrapt = "1.16.0"
wsproto = "1.2.0"
xattr = "0.10.1"
yarl = "1.9.4"
zipp = "3.17.0"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
openai = ">=1.1.0"
langchain = "^0.0.350"
llama-index = "^0.9.15"
transformers = "^4.30.1"
matplotlib = "3.7.1"
farm-haystack = "^1.18.0"
plotly = "^5.18.0"

[tool.poetry.group.mypy]
optional = true

[tool.poetry.group.mypy.dependencies]
mypy = "^1.7.1"
types-requests = "^2.31.0.2"
types-aiofiles = "^23.1.0.5"

[tool.mypy]
python_version = "3.8"


[[tool.mypy.overrides]]
module = [
    "anthropic",
    "huggingface_hub.inference_api",
    "fastapi_socketio",
    "filetype",
    "haystack.*",
    "langflow",
    "lazify",
    "matplotlib.*",  # remove when 3.8.0 is out, it should export types
    "plotly.*",
    "nest_asyncio",
    "python_graphql_client",
    "socketio.*",
    "uptrace",
    "syncer",
    "vertexai.language_models",
    "vertexai.preview.generative_models",
    "google.cloud"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
